# df-twbt

./: .gitignore  CMakeLists.txt  DFHack Dirs.props  Makefile  PATCHES.md  README.md  README.txt  build-windows.bat  building_classes.txt  building_type.h  buildings.hpp  buildings_other_id.h  classes.txt  commands.hpp  config.hpp  dungeonmode.hpp  dwarfmode.hpp  gui_hooks.hpp  item_classes.txt  item_type.h  items.hpp  macros.hpp  patches.hpp  plugin.hpp  renderer.hpp  renderer_twbt.h  tileupdate_map.hpp  tileupdate_text.hpp  tradefix.hpp  twbt.cpp  twbt.sln  twbt.vcxproj  twbt.vcxproj.filters  units.hpp  zoomfix.hpp
legacy/: renderer_legacy.hpp  twbt_legacy.hpp
libpng/: libpng15-15.lib  libpng15.lib  libpng15_static.lib  libpng_static.lib  zlibstatic.lib
map/: map0.html  process.pl
map/leaflet-bookmarks/: Leaflet.Bookmarks.js  Leaflet.Bookmarks.min.js  leaflet.bookmarks.css  leaflet.bookmarks.min.css
map/leaflet-label/: leaflet.label.css
map/minimap/: Control.MiniMap.min.js
plugins/: CMakeLists.txt  Makefile  automaterial.cpp  mousequery.cpp  mousequery.vcxproj  plugins.vcxproj  resume.cpp
png++/: README  error.hpp  solid_pixel_buffer_inverted.hpp  solid_pixel_buffer_rev.hpp
